# pnp-project

./: ActuatorsScreen.qml  CMakeLists.txt  ConfigActScreen.qml  ConfigurationScreen.qml  CurrentStatusScreen.qml  CustomButton.qml  CustomIcon.qml  Effect.qml  EffectColorArea.qml  EffectPreview.qml  IconLabel.qml  LEDControlScreen.qml  Main.qml  ModeSelection.qml  Preset.qml  Status.qml  TemperatureDial.qml  arduinocommunication.cpp  arduinocommunication.h  heatingcontrol.cpp  heatingcontrol.h  ledcontrol.cpp  ledcontrol.h  main.cpp  manager.cpp  manager.h  qml.qrc
ColorInterpolation/: ColorInterpolation.qml  InterpolationStop.qml
arduino/: arduino.ino
arduino_nano/: arduino_nano.ino
icons/: attribution.txt
qt-project.org/imports/QtGraphicalEffects/: CMakeLists.txt
